openshift-objects/manager2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: manager2
  namespace: llm-report
spec:
  replicas: 1
  selector:
    matchLabels:
      app: manager2
  template:
    metadata:
      labels:
        app: manager2
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: manager2
          image: image-registry.openshift-image-registry.svc:5000/llm-report/manager2:v0.1
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
            - containerPort: 11434
          volumeMounts:
            - name: prompt-volume
              mountPath: /home/ollama/prompts
              readOnly: true
            - name: model-volume
              mountPath: /home/ollama/model
              readOnly: true
            - name: models-volume
              mountPath: /home/ollama/.ollama
      volumes:
        - name: prompt-volume
          configMap:
            name: manager2-prompt
        - name: model-volume
          configMap:
            name: manager2-model
        - name: models-volume
          persistentVolumeClaim:
            claimName: manager2-ollama-pvc
