openshift-objects/manager1-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: manager1-service
  namespace: llm-report
spec:
  selector:
    app: manager1
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
