openshift-objects/manager2-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: manager2-service
  namespace: llm-report
spec:
  selector:
    app: manager2
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
